--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -37,12 +37,12 @@ GUI apps!
 ====
 *Command Format*
 
-* Words in `[SQUARE BRACKETS]` are the mandatory parameters to be supplied by the user e.g. in `add [n/NAME] [d/DESCRIPTION] [a/AMOUNT]`, `NAME` `DESCRIPTION` and `AMOUNT` are parameters which can be used as `expense add n/buy a book d/math book a/10`.
+* Words in `[SQUARE BRACKETS]` are the mandatory parameters to be supplied by the user e.g. in `add n/[NAME] d/[DESCRIPTION] a/[AMOUNT]`, `NAME` `DESCRIPTION` and `AMOUNT` are parameters which can be used as `expense add n/buy a book d/math book a/10`.
 * The mandatory parameters must be supplied in the order specified.
 * Default values can be specified in the square brackets, e.g `[NUM_ENTRIES, DEFAULT = 10]`. If the user does not provide a value for that parameter, it will default to the default value stated.
-* Some commands may have optional parameters denoted under options. These can be included by specifying in `<ANGULAR BRACKETS>` format, e.g `<a/AMOUNT>` can be used as `expense edit 2 a/10`.
+* Some commands may have optional parameters denoted under options. These can be included by specifying in `<ANGULAR BRACKETS>` format, e.g `a/<AMOUNT>` can be used as `expense edit 2 a/10`.
 * Flags can be in any order.
-* Items with `…`​ after them can be used multiple times including zero times e.g. `<t/TAG>...` can be used as `{nbsp}` (i.e. 0 times), `bills`, `bills fees` etc.
+* Items with `…`​ after them can be used multiple times including zero times e.g. `t/<TAG>...` can be used as `{nbsp}` (i.e. 0 times), `bills`, `bills fees` etc.
 
 ====
 
@@ -132,7 +132,7 @@ This command adds your input tag(s) to the expense at the index you have specifi
 {nbsp} +
 Usage:
 
- tag add [INDEX] t/[TAG] t/[TAG…]
+ tag add [INDEX] t/[TAG] t/<TAG>...
 
 Example: +
 Lets say that you want to add the tags "_holiday_" and "_hangout_" to the expense "_USS_" at index 2. +
@@ -161,7 +161,7 @@ This command removes your input tag(s) from the expense at the index you have sp
 {nbsp} +
 Usage:
 
- tag rm [INDEX] t/[TAG] t/[TAG…]
+ tag rm [INDEX] t/[TAG] t/<TAG>...
 
 Example: +
 Lets say that you want to remove the tags "_holiday_" and "_hangout_" from the expense "_USS_" at index 2. +
@@ -190,7 +190,7 @@ This command filters expenses by your input tag(s). +
 {nbsp} +
 Usage:
 
- tag filter t/[TAG] t/[TAG…]
+ tag filter t/[TAG] t/<TAG>...
 
 
 Example: +
